* generate maze based on image